<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.anders.spotifyalarm.MediaSearch.MediaFragment">

    <FrameLayout
        android:id="@+id/song_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Transparent"
        android:elevation="1dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/spotify_list_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLightTransparent"
        android:elevation="1dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/change_album_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Transparent"
        android:elevation="1dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5pt"
                android:background="@drawable/back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="9dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/spotify_playlists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/playlist_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/to_spotify_playlists"
                        android:fontFamily="casual"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/toSongFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/musical_note" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/to_song_search"
                        android:fontFamily="casual"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="27dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/green1" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="1"
                        android:elevation="2dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@drawable/media_recycler_view_background"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/playlist_title_edit_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:fontFamily="casual"
                                android:padding="9dp"
                                android:hint="@string/set_title_hint"
                                android:textStyle="bold"
                                android:textColor="@color/grey"
                                android:textColorHint="@color/grey"
                                android:textSize="@dimen/large" />

                            <Button
                                android:id="@+id/set_title"
                                android:layout_width="0px"
                                android:layout_height="match_parent"
                                android:layout_margin="2.5dp"
                                android:layout_weight=".5"
                                android:background="#00000000"
                                android:fontFamily="serif"
                                android:padding="9dp"
                                android:text="@string/set_title"
                                android:textAlignment="textEnd"
                                android:textAllCaps="true"
                                android:textColor="@color/green1"
                                android:textSize="@dimen/normal"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/orange" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/songs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:alpha="1"
                        android:elevation="2dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/media_recycler_view_background"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="casual"
                                android:padding="9dp"
                                android:text="@string/saved_playlists"
                                android:textColor="@color/green1"
                                android:textColorHint="@color/green1"
                                android:textSize="@dimen/large" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/green1"
                                android:textSize="@dimen/normal" />

                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/playlists"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#00000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>


</FrameLayout>
